@@ -30,7 +30,7 @@ import pickle
 import shutil
 from optparse import OptionParser
 from config_parse import FceuxConfigParser
-from get_key import KeyGrabber
+import get_key
 #from subprocess import Popen
 
 try:
@@ -551,20 +551,21 @@ class GfceuxApp:
                 options.romfile = x
     
     # fix this global its ugly
-    gamepad_config = "0"
+    # specifies which NES gamepad we are configuring
+    gamepad_config_no = "0"
   
     def gamepad_clicked(self, widget, data=None):
         widgets.get_object("gamepad_config_window").show_all()
 
-        d = {'gp1_button' : "0",
-            'gp2_button' : "1",
-            'gp3_button' : "2",
-            'gp4_button' : "3"}
-        self.gamepad_config = d[widget.name]
+        d = {'gp1_button' : "1",
+            'gp2_button' : "2",
+            'gp3_button' : "3",
+            'gp4_button' : "4"}
+        self.gamepad_config_no = d[widget.name]
     
 
     def button_clicked(self, widget, data=None):
-        prefix = "SDL.Input.GamePad" + self.gamepad_config 
+        prefix = "SDL.Input.GamePad" + self.gamepad_config_no
         d = {'right_button' : prefix + "Right",
          'left_button' : prefix + "Left",
          'up_button' : prefix + "Up",
@@ -575,17 +576,18 @@ class GfceuxApp:
          'b_button' : prefix + "B",
          'turbo_a_button' : prefix + "TurboA",
          'turbo_b_button' : prefix + "TurboB"}
-        kg = KeyGrabber()
-        key = kg.get_key()
-        cp = FceuxConfigParser(configfile)
-        cp.writeKey(d[widget.name], key)
+        
+        if get_key.has_pygame == False:
+            self.msg("Pygame could not be found on this system.  Gfceux will revert to the old configuration routine.", True)
+            self.gamepad_clicked_old(widget)
+        else:
+            kg = get_key.KeyGrabber()
+            key = kg.get_key()
+            cp = FceuxConfigParser(configfile)
+            cp.writeKey(d[widget.name], key)
   
     def gamepad_clicked_old(self, widget, data=None):
-        d = {'gp1_button' : '1',
-         'gp2_button' : '2',
-         'gp3_button' : '3',
-         'gp4_button' : '4'}
-        command = '-inputcfg gamepad' + d[widget.name] + ' /dev/null'
+        command = '--inputcfg gamepad' + self.gamepad_config_no
         self.launch(command, True)
     
     def gamepad_window_close(self, widget, data=None):
