@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Dec  5 02:36:02 2008 -->
+<!--Generated with glade3 3.4.5 on Fri Dec  5 03:16:36 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="gamepad_config_window">
     <signal name="destroy" handler="gamepad_window_close"/>
@@ -676,7 +676,8 @@
                                   <widget class="GtkSpinButton" id="xscale_spin">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="adjustment">2 1 5 0.5 1 10</property>
+                                    <property name="adjustment">2 1 5 0.5 1 0</property>
+                                    <property name="climb_rate">0.099999999776482579</property>
                                     <property name="digits">1</property>
                                     <property name="numeric">True</property>
                                   </widget>
@@ -707,7 +708,8 @@
                                   <widget class="GtkSpinButton" id="yscale_spin">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
-                                    <property name="adjustment">2 1 10 0.5 1 10</property>
+                                    <property name="adjustment">2 1 10 0.5 1 0</property>
+                                    <property name="climb_rate">0.10000000000000001</property>
                                     <property name="digits">1</property>
                                     <property name="numeric">True</property>
                                     <property name="update_policy">GTK_UPDATE_IF_VALID</property>
@@ -1050,7 +1052,7 @@ Invalid options may cause GFCE UltraX to behave incorrectly.
                               <widget class="GtkSpinButton" id="host_port">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="adjustment">4046 1 65536 1 10 10</property>
+                                <property name="adjustment">4046 1 65536 1 10 0</property>
                                 <property name="climb_rate">1</property>
                               </widget>
                               <packing>
@@ -1133,7 +1135,7 @@ Invalid options may cause GFCE UltraX to behave incorrectly.
                               <widget class="GtkSpinButton" id="join_port">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
-                                <property name="adjustment">4046 1 65536 1 10 10</property>
+                                <property name="adjustment">4046 1 65536 1 10 0</property>
                                 <property name="climb_rate">1</property>
                               </widget>
                               <packing>
